--- a/package.json
+++ b/package.json
@@ -1,14 +1,21 @@
 {
   "name": "bound-sensor",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Find out once element size changes",
-  "main": "dist/bound-sensor.js",
+  "author": "aminpaks <amin.pakseresht@hotmail.com>",
+  "license": "MIT",
+  "main": "./dist/bundles/bound-sensor.umd.min.js",
+  "module": "./dist/bound-sensor.es5.js",
+  "es2015": "./dist/bound-sensor.js",
   "types": "./dist/bound-sensor.d.ts",
   "scripts": {
-    "build": "npm-run-all clean_dist clean_aot compile clean_aot",
-    "clean_aot": "shx rm -rf ./aot",
-    "clean_dist": "shx rm -rf ./dist",
-    "compile": "ngc -p tsconfig.json"
+    "bundle": "npm-run-all clean:* inline build",
+    "clean:dist": "shx rm -rf ./dist",
+    "clean:tsc": "shx rm -rf ./out-tsc",
+    "inline": "npm-run-all -p inline:*",
+    "inline:src": "ng2-inline -b src -r -o out-tsc/lib 'src/**/*.ts'",
+    "inline:index": "ng2-inline -b src -r -o out-tsc/lib index.ts",
+    "build": "node build.js"
   },
   "repository": {
     "type": "git",
@@ -20,15 +27,28 @@
     "container element resize",
     "element resize event"
   ],
-  "author": "aminpaks <amin.pakseresht@hotmail.com>",
-  "license": "MIT",
+  "peerDependencies": {
+    "@angular/core": ">=4.0.0 <5.0.0 || >=4.0.0-beta <5.0.0"
+  },
   "devDependencies": {
+    "@angular/animations": "^4.2.4",
+    "@angular/common": "^4.2.4",
+    "@angular/compiler": "^4.2.4",
     "@angular/compiler-cli": "^4.1.3",
-    "@angular/platform-server": "^4.1.3",
     "@angular/core": "^4.1.3",
+    "@angular/platform-browser": "^4.2.4",
+    "@angular/platform-server": "^4.1.3",
+    "angular2-inline-template-style": "^1.1.0",
+    "camelcase": "^4.1.0",
+    "chokidar": "^1.7.0",
     "core-js": "^2.4.1",
     "npm-run-all": "^4.0.2",
     "reflect-metadata": "^0.1.10",
+    "rollup": "^0.43.0",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-uglify": "^2.0.1",
     "rxjs": "^5.4.0",
     "shx": "^0.2.2",
     "tslint": "^5.4.2",
