--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,15 @@
 {
     "compilerOptions": {
-        "target": "es5",
         "module": "es2015",
         "moduleResolution": "node",
         "sourceMap": true,
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "removeComments": false,
-        "noImplicitAny": true,
+        "inlineSources": true,
         "declaration": true,
-        "outDir": "dist",
+        "experimentalDecorators": true,
+        "noImplicitAny": false,
+        "suppressImplicitAnyIndexErrors": true,
+        "stripInternal": true,
         "lib": ["es2015", "dom"],
-        "suppressImplicitAnyIndexErrors": true
-    },
-    "formatCodeOptions": {
-        "tabSize": 4,
-        "indentSize": 4
-    },
-    "files": [
-        "src/bound-sensor.ts"
-    ],
-    "angularCompilerOptions": {
-        "genDir": "aot",
-        "skipMetadataEmit" : true
+        "baseUrl": "./"
     }
 }
