Fixes ES5 module output

--- a/tsconfig-aot.es5.json
+++ b/tsconfig-aot.es5.json
@@ -25,7 +25,7 @@
         "strictMetadataEmit": true,
         "skipTemplateCodegen": true,
         "annotateForClosureCompiler": true,
-        "flatModuleOutFile": "bound-sensor.es5.js",
+        "flatModuleOutFile": "bound-sensor.js",
         "flatModuleId": "bound-sensor",
         "genDir": "../"
     }
