--- a/examples/bound-sensor-demo/package.json
+++ b/examples/bound-sensor-demo/package.json
@@ -8,8 +8,7 @@
     "start": "webpack-dev-server"
   },
   "dependencies": {
-    "bound-sensor": "^1.0.0",
-    "core-js": "^2.4.1"
+    "bound-sensor": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^8.0.3",
@@ -19,7 +18,7 @@
     "raw-loader": "^0.5.1",
     "style-loader": "^0.18.2",
     "ts-loader": "^2.2.0",
-    "ts-node": "^3.1.0",
+    "ts-node": "^3.2.1",
     "tslint": "^5.4.3",
     "typescript": "^2.3.4",
     "webpack": "^2.2.16",
