--- a/modules/angular-bound-sensor/package.json
+++ b/modules/angular-bound-sensor/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-bound-sensor",
-  "version": "1.0.1",
+  "version": "1.0.0",
   "description": "Find out once boundary size of element changes in Angular",
   "author": "aminpaks <amin.pakseresht@hotmail.com>",
   "license": "MIT",
@@ -16,42 +16,36 @@
     "rollup:builds": "ts-node ./builder/rollup-build.ts",
     "bundle": "npm-run-all clean inline:* rollup:*"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/aminpaks/angular-bound-sensor.git"
-  },
+  "repository": "https://github.com/aminpaks/bound-sensor/tree/master/modules/angular-bound-sensor",
   "keywords": [
     "angular",
     "angular2",
-    "container element resize",
-    "resize event for angular2",
-    "resize sensor for angular2",
-    "element resize event"
+    "angular4",
+    "container size",
+    "resize event"
   ],
   "dependencies": {
+    "@angular/core": "4.1.3",
     "bound-sensor": "^1.0.0",
-    "@angular/core": ">= 4.0.0 < 5",
     "rxjs": "^5.0.0",
     "zone.js": "^0.8.0"
   },
   "peerDependencies": {
-    "@angular/core": "^4.0.0",
-    "rxjs": "^5.0.0",
-    "zone.js": "^0.8.0"
+    "@angular/core": ">= 4.0.0 < 5",
+    "bound-sensor": "^1.0.0",
+    "rxjs": ">= 5.0.0",
+    "zone.js": ">= 0.8.0"
   },
   "devDependencies": {
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@types/lodash-es": "^4.14.5",
+    "@angular/compiler": "4.1.3",
+    "@angular/compiler-cli": "4.1.3",
     "@types/node": "^8.0.8",
     "@types/rollup": "^0.41.1",
     "angular2-inline-template-style": "^1.1.0",
     "camelcase": "^4.1.0",
     "chokidar": "^1.7.0",
-    "lodash-es": ">=4.0.0 <5.0.0",
     "magic-string": "^0.22.2",
     "npm-run-all": "^4.0.2",
-    "reflect-metadata": "^0.1.10",
     "rimraf": "^2.6.1",
     "rollup": "^0.43.1",
     "rollup-plugin-commonjs": "^8.0.2",
