--- a/modules/angular-bound-sensor/tsconfig-aot.json
+++ b/modules/angular-bound-sensor/tsconfig-aot.json
@@ -26,7 +26,7 @@
   "angularCompilerOptions": {
     "strictMetadataEmit": true,
     "skipTemplateCodegen": true,
-    "annotateForClosureCompiler": true,
+    "annotateForClosureCompiler": false,
     "flatModuleOutFile": "angular-bound-sensor.js",
     "flatModuleId": "angular-bound-sensor"
   }
