--- a/modules/angular-bound-sensor/package.json
+++ b/modules/angular-bound-sensor/package.json
@@ -25,7 +25,7 @@
     "resize event"
   ],
   "dependencies": {
-    "@angular/core": "4.1.3",
+    "@angular/core": "~4.1.3",
     "bound-sensor": "^1.0.2",
     "rxjs": "^5.0.0",
     "zone.js": "^0.8.0"
