--- a/modules/angular-bound-sensor/package.json
+++ b/modules/angular-bound-sensor/package.json
@@ -7,7 +7,7 @@
   "main": "dist/bundles/angular-bound-sensor.umd.min.js",
   "module": "dist/angular-bound-sensor.es5.js",
   "es2015": "dist/angular-bound-sensor.js",
-  "types": "dist/index.d.ts",
+  "typings": "dist/angular-bound-sensor.d.ts",
   "scripts": {
     "clean": "npm-run-all clean:*",
     "clean:dist": "rimraf ./dist",
@@ -25,20 +25,16 @@
     "resize event"
   ],
   "dependencies": {
-    "@angular/core": "~4.1.3",
-    "bound-sensor": "^1.0.2",
-    "rxjs": "^5.0.0",
-    "zone.js": "^0.8.0"
+    "bound-sensor": "^1.0.2"
   },
   "peerDependencies": {
-    "@angular/core": ">= 4.0.0 < 5",
-    "bound-sensor": "^1.0.2",
-    "rxjs": ">= 5.0.0",
-    "zone.js": ">= 0.8.0"
+    "@angular/core": ">= 2.4.3 < 5",
+    "bound-sensor": "^1.0.2"
   },
   "devDependencies": {
-    "@angular/compiler": "4.1.3",
-    "@angular/compiler-cli": "4.1.3",
+    "@angular/compiler": "~4.2.0",
+    "@angular/compiler-cli": "~4.2.0",
+    "@angular/core": "~4.2.0",
     "@types/node": "^8.0.8",
     "@types/rollup": "^0.41.1",
     "angular2-inline-template-style": "^1.1.0",
@@ -52,8 +48,10 @@
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-uglify": "^2.0.1",
+    "rxjs": "^5.0.0",
     "ts-node": "^3.2.0",
     "tslint": "^5.4.2",
-    "typescript": "~2.3.4"
+    "typescript": "~2.3.4",
+    "zone.js": "^0.8.0"
   }
 }
