--- a/modules/bound-sensor/package.json
+++ b/modules/bound-sensor/package.json
@@ -15,6 +15,7 @@
     "build:es2015": "tsc --module es2015 --declaration true --target es6 --outDir tsc-out/es2015",
     "build:es5": "tsc --module es2015 --skipLibCheck false --target es5 --outDir tsc-out/es5",
     "build:rollup": "node rollup-build.js",
+    "lint": "tslint --project tsconfig.json --type-check 'src/**/*.ts'",
     "bundle": "npm-run-all clean build:*"
   },
   "repository": "https://github.com/aminpaks/bound-sensor/tree/master/modules/bound-sensor",
@@ -31,7 +32,7 @@
     "rollup": "^0.43.1",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-uglify": "^2.0.1",
-    "tslint": "^5.4.3",
+    "tslint": "^5.5.0",
     "typescript": "~2.3.4",
     "uglify-js": "^3.0.25"
   }
