Updates angular dependencies

--- a/modules/angular-bound-sensor/package.json
+++ b/modules/angular-bound-sensor/package.json
@@ -32,14 +32,15 @@
     "bound-sensor": "^1.0.2"
   },
   "devDependencies": {
-    "@angular/compiler": "~4.2.0",
-    "@angular/compiler-cli": "~4.2.0",
-    "@angular/core": "~4.2.0",
+    "@angular/compiler": "~4.1.0",
+    "@angular/compiler-cli": "~4.1.0",
+    "@angular/core": "~4.1.0",
     "@types/node": "^8.0.8",
     "@types/rollup": "^0.41.1",
     "angular2-inline-template-style": "^1.1.0",
     "camelcase": "^4.1.0",
     "chokidar": "^1.7.0",
+    "codelyzer": "^3.1.2",
     "magic-string": "^0.22.2",
     "npm-run-all": "^4.0.2",
     "rimraf": "^2.6.1",
