--- a/examples/angular-bound-sensor-cli-demo/package.json
+++ b/examples/angular-bound-sensor-cli-demo/package.json
@@ -11,7 +11,6 @@
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^4.2.4",
     "@angular/common": "^4.2.4",
@@ -23,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
     "angular-bound-sensor": "^1.0.6",
+    "bound-sensor": "^1.0.6",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "custom-event-polyfill": "^0.3.0",
@@ -32,7 +32,7 @@
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.0",
+    "@angular/cli": "^1.3.2",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
