--- a/modules/bound-sensor/package.json
+++ b/modules/bound-sensor/package.json
@@ -26,6 +26,6 @@
     "rimraf": "^2.6.1",
     "tslint": "^5.5.0",
     "typescript": "~2.3.4",
-    "typescript-library-bundler": "^0.0.8"
+    "typescript-library-bundler": "beta"
   }
 }
