--- a/examples/angular-bound-sensor-cli-demo/package.json
+++ b/examples/angular-bound-sensor-cli-demo/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-bound-sensor-cli-demo",
-  "version": "1.0.7",
+  "version": "1.1.0",
   "license": "MIT",
   "private": true,
   "scripts": {
@@ -21,8 +21,8 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
-    "angular-bound-sensor": "^1.1.0-beta-1",
-    "bound-sensor": "^1.0.6",
+    "angular-bound-sensor": "^1.1.0",
+    "bound-sensor": "^1.1.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.4.1",
     "custom-event-polyfill": "^0.3.0",
