--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "lerna run lint"
   },
   "devDependencies": {
-    "lerna": "^2.0.0-rc.5",
+    "lerna": "^2.8.0",
     "tslint": "^5.5.0",
     "typescript": "^2.4.1"
   },
